# cc1

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: run_analyzer.yml
apps/: log_results.py  run_analysis.py
poe_trade_lib/: api.py  client.py  config.py  core.py  db_utils.py  logging_config.py  models.py  utils.py
poe_trade_lib/strategies/: __init__.py  base_strategy.py  flip_scarabs.py  flip_tattoos.py  invest_gems.py
